tests/expectations/compiler/finalize/decrement_fail.out
Error [ETYC0372005]: Unknown function `decrement`
    --> compiler-test:11:5
     |
  11 |     decrement(amounts, addr, amount);
     |     ^^^^^^^^^
